updated project list

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                     <div class="service-box">
                         <!--i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i-->
                         <!-- <img src="img/coriolis.jpg"></img> -->
-                        <h3><a href="https://github.com/ishwarsawale/my_dev_setup">My Dev Setup</a></h3>
-                        <p class="text-muted">Ishwar is using Ubuntu 16.04  and i3wm with custom changes</p>
+                        <h3><a href="https://github.com/ishwarsawale/TensorflowOnAndroid">Tensorflow multiclass classification</a></h3>
+                        <p class="text-muted">Inception model from Google is used as local resource</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -170,8 +170,8 @@
                     <div class="service-box">
                         <!-- class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i-->
                         <!-- <img src="img/McAfee.jpg" data-wow-delay=".1s"></img> -->
-                        <h3><a href="https://github.com/ishwarsawale/bash_code">Bash Code</a></h3>
-                        <p class="text-muted">Ishwar's changes in bashrc and Helpful script to speed up development</p>
+                        <h3><a href="https://github.com/ishwarsawale/RSSReaderKotlinAndroid">RSS reader app in Kotlin</a></h3>
+                        <p class="text-muted">RSS reader app for datatau.com in Kotlin</p>
                     </div>
                 </div>
 
@@ -179,8 +179,8 @@
                     <div class="service-box">
                         <!-- class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i-->
                         <!-- <img src="img/McAfee.jpg" data-wow-delay=".1s"></img> -->
-                        <h3><a href="https://github.com/ishwarsawale/data_science/tree/chicago-taxi-data_analyasis">Chicago Taxi Analyasis</a></h3>
-                        <p class="text-muted">Ishwar did data mining and analytics of Chicago Taxi data analyasis using R </p>
+                        <h3><a href="https://github.com/ishwarsawale/MNIST_DEMO_on_Android">Digit Recognition App</a></h3>
+                        <p class="text-muted">Using MNIST data set trained Tensorflow and Keras model, then used in app as local resource</p>
                     </div>
                 </div>
             </div>
