--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="header-content-inner">
                 <h1>Hi, there I'm Ishwar</h1>
                 <hr>
-                <h2 class="section-heading">Full stack developer & Scrum Master </h2>
+                <h2 class="section-heading">Full stack developer</h2>
                 <!-- <p>Software enginner, not just by Profession but by Attitude</p> -->
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About me</a>
             </div>
@@ -97,10 +97,10 @@
                     <h2 class="section-heading">Coriolis Technologies </h2>
                     <h2 class="section-heading">Member Of Technical Staff</h2>
                     <hr class="light">
-                    <p class="text-faded">Ishwar is working as Software Engineer in Coriolis Technologies, for more than a year, Ishwar has developed and maintained number of applications such as license plate recongnition engine, soap-api client in C, an AMI automation tool for AWS CLI. </p>
-                    <p class="text-faded">Prior to Coriolis , Ishwar has completed  Diploma in Big Data Analytics and Bachelor of Engineering from
+                    <p class="text-faded">I am  working as Software Engineer in Coriolis Technologies, for more than a year, I had developed and maintained number of applications such as license plate recongnition engine, soap-api client in C, an AMI automation tool for AWS CLI. </p>
+                    <p class="text-faded">Prior to Coriolis , I had completed  Diploma in Big Data Analytics and Bachelor of Engineering from
                     Univesity Of Pune.</p>
-                    <p class="text-faded">Ishwar  primarily use C and Python, but also has experience with R and Java. Ishwar is quick learner and enthusiastic about learning new technologies.</p>
+                    <p class="text-faded">I am quick learner and enthusiastic about learning new technologies, In past I had used C,Python,Java,R,Kotlin,Bash,Go language for my development purpose.</p>
                     <!--a href="#" class="btn btn-default btn-xl">Get Started!</a-->
                 </div>
             </div>
@@ -130,6 +130,19 @@
                             <li>REST API'S in RubyOnRalis</li>
                             <li>SOAP-API client    In C</li>
                             <li>RESP-API client    In GO</li>
+                        </ul>
+                    </div>
+                </div>
+				
+				 <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <!--i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i-->
+                        <img src="img/coriolis.jpg"></img>
+                        <h3><a href="http://www.coriolis.co.in/">Coriolis Technologies </a></h3>
+                        <p class="text-muted">Member of Technical Staff</p>
+                        <ul>
+                            <li>AWS cli automation</li>
+							<li>JAVA backend development</li>
                         </ul>
                     </div>
                 </div>
