--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Projects</h2>
                     <hr class="primary">
-                    <p>Following are some of my Hobby Projects</p>
+                    <p>Following are some of my Hobby Projects for Github<A HREF="ishwars-git.html">click here</A> </p>
                 </div>
             </div>
         </div>
