--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a class="page-scroll" href="#work">Work Experience</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#projects">Projects</a>
+                        <a class="page-scroll" href="#projects">Open Source Projects</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="ishwars-git.html">ishwars-git</a>
@@ -155,9 +155,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Projects</h2>
+                    <h2 class="section-heading">Open Source Projects</h2>
                     <hr class="primary">
-                    <p>Following are some of my Hobby Projects & for Github<A HREF="ishwars-git.html">  click here</A> </p>
+                    <p>Following are some of my Open Source Projects & for Github<A HREF="ishwars-git.html">  click here</A> </p>
                 </div>
             </div>
         </div>
