updated project list

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Work Experience</h2>
                     <hr class="primary">
-                    <p>Ishwar has worked with the following companies</p>
+					<p>Following is list of Firms I am working and I had worked in past</p>
+                    <p>I am currently working with Coriolis Technologies Pvt Ltd for 16 months, following is quick overview about my work there.</p>
                 </div>
             </div>
         </div>
