updated project list

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <p class="text-faded">I am  working as Software Engineer in Coriolis Technologies, for more than a year, I had developed and maintained number of applications such as license plate recongnition engine, soap-api client in C, an AMI automation tool for AWS CLI. </p>
                     <p class="text-faded">Prior to Coriolis , I had completed  Diploma in Big Data Analytics and Bachelor of Engineering from
                     Univesity Of Pune.</p>
-                    <p class="text-faded">I am quick learner and enthusiastic about learning new technologies, In past I had used C,Python,Java,R,Kotlin,Bash,Go language for my development purpose. I am currently working with Coriolis Technologies Pvt Ltd for 16 months, in <a href="#work">following</a>  section is quick overview about my work there.</p>
+                    <p class="text-faded">I am quick learner and enthusiastic about learning new technologies, In past I had used C,Python,Java,R,Kotlin,Bash,Go language for my development purpose. I am currently working with Coriolis Technologies Pvt Ltd for 16 months, in following section is quick overview about my work there.</p>
                     <!--a href="#" class="btn btn-default btn-xl">Get Started!</a-->
                 </div>
             </div>
