--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <!--i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i-->
                         <!-- <img src="img/coriolis.jpg"></img> -->
                         <h3><a href="https://github.com/ishwarsawale/TensorflowOnAndroid">Tensorflow multiclass classification</a></h3>
-                        <p class="text-muted">Inception model from Google is used as local resource</p>
+                        <p class="text-muted">Inception model in an Android App</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
