added new projects

--- a/index.html
+++ b/index.html
@@ -196,6 +196,24 @@
                     </div>
                 </div>
             </div>
+             <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <!--i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i-->
+                        <!-- <img src="img/coriolis.jpg"></img> -->
+                        <h3><a href="https://github.com/ishwarsawale/Festival-Recognition-App">Festival Recognition App</a></h3>
+                        <p class="text-muted">App to classify diffrent festivals</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <!-- class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i-->
+                        <!-- <img src="img/McAfee.jpg" data-wow-delay=".1s"></img> -->
+                        <h3><a href="https://github.com/ishwarsawale/Android-Apps-In-Kotlin">Android Apps In Kotlin</a></h3>
+                        <p class="text-muted">Devlopting Android Apps in Kotlin</p>
+                    </div>
+                </div>
+            </div>
         <div style="clear: both;" class="clear"></div>
     </div>
         </div>
