added new project

--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@
                         <p class="text-muted">Devlopting Android Apps in Kotlin</p>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <!-- class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i-->
+                        <!-- <img src="img/McAfee.jpg" data-wow-delay=".1s"></img> -->
+                        <h3><a href="https://github.com/ishwarsawale/real-time-face-recognition-with-facenet">Real-Time Face Recognition</a></h3>
+                        <p class="text-muted">Face Recognition Based on Facenet</p>
+                    </div>
+                </div>
             </div>
         <div style="clear: both;" class="clear"></div>
     </div>
@@ -243,7 +251,7 @@
                     <a class="fa fa-phone fa-3x wow bounceIn"></i>
                 </div-->
                 <div class="col-lg-2 text-center">
-                    <a href="mailto:ishwarsawale@gmail.com" class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a>
+                    <a href="mailto:ishwar.code@gmail.com" class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a>
                 </div>
             </div>
         </div>
