--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
                     <h2 class="section-heading">Coriolis Technologies </h2>
                     <h2 class="section-heading">Member Of Technical Staff</h2>
                     <hr class="light">
-                    <p class="text-faded">I am currently working with Coriolis Technologies Pvt Ltd for 1.8 years, I had developed and maintained the number of applications in Coriolis such as license plate recognition engine, soap-API client in C, an AMI automation tool for AWS CLI. </p>
+                    <p class="text-faded">I am currently working with Coriolis Technologies Pvt Ltd. I had developed and maintained the number of applications in Coriolis such as License plate recognition engine, SOAP-API client in C, an AMI automation tool for AWS CLI, Orchestration tool written in Ruby On Rails.</p>
+                    <p class="text-faded">Other than active development on daily basis, my responsibilities here at Coriolis includes working as Scrum master, leading the small team of Developer and QA members.</p>
                     <p class="text-faded">Prior to Coriolis, I had completed Diploma in Big Data Analytics and Bachelor of Engineering from Univesity Of Pune.</p>
-                    <p class="text-faded">I am a quick learner and enthusiastic about learning new technologies, I am working with C, Python, Java, R, Kotlin, Bash, Go language for my development purpose.I am also working on some hobby project such as developing apps in Kotlin for android platform, real-time image classification in an android app by training machine learning model on the server and recompiling it using TensorFlow for Android</p>
+                    <p class="text-faded">I am a quick learner and enthusiastic about learning new technologies, I am working with C, Python, Java, R, Kotlin, Bash, Go language for my development purpose.</p>
+                    <p class="text-faded">I am also working on some hobby project such as developing apps in Kotlin for android platform, real-time image classification in an android app by training machine learning model on the server and recompiling it using TensorFlow for Android, another one is creating real-time face recognition using facenet as backend.</p>
                     <!--a href="#" class="btn btn-default btn-xl">Get Started!</a-->
                 </div>
             </div>
