--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Hi there, I'm Ishwar</h1>
+                <h1>Hi, I'm Ishwar. I design & build</h1>
                 <hr>
                 <h2 class="section-heading">Full stack developer</h2>
                 <!-- <p>Software enginner, not just by Profession but by Attitude</p> -->
