--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Hi, I'm Ishwar. I design & build</h1>
+                <h1>Hi, I'm Ishwar</h1>
                 <hr>
-                <h2 class="section-heading">Full stack developer</h2>
+                <h2 class="section-heading">I design & build</h2>
                 <!-- <p>Software enginner, not just by Profession but by Attitude</p> -->
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About me</a>
             </div>
