--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                         <a class="page-scroll" href="#work">Work Experience</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="ml.md">Data science portfolio</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#projects">Open Source Projects</a>
                     </li>
                     <li>
