--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a class="page-scroll" href="#work">Work Experience</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="ml.md">Data science portfolio</a>
+                        <a class="page-scroll" href="ml.html">Data science portfolio</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#projects">Open Source Projects</a>
