adding updated work exp

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a class="page-scroll" href="#projects">Open Source Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="ishwars-git.html">ishwars-git</a>
+                        <a class="page-scroll" href="ishwars-git.html">Github</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="resume/resume.pdf">Resume</a>
@@ -136,7 +136,6 @@
                         </ul>
                     </div>
                 </div>
-				
 				 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <!--i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i-->
@@ -147,6 +146,20 @@
                             <li>AWS cli automation</li>
 							<li>RESP-API client    In GO</li>
 							<li>JAVA backend development</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <!--i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i-->
+                        <img src="img/coriolis.jpg"></img>
+                        <h3><a href="http://www.coriolis.co.in/">Coriolis Technologies </a></h3>
+                        <p class="text-muted">Member of Technical Staff</p>
+                        <ul>
+                            <li>Orchestration for Puppet</li>
+                            <li>Orchestration for Chef</li>
+                            <li>Orchestration for Ansible</li>
+                            <li>Migration of VMware vSphere OVA to Azure</li>
                         </ul>
                     </div>
                 </div>
