adding dev opts

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                         <h3><a href="http://www.coriolis.co.in/">Coriolis Technologies </a></h3>
                         <p class="text-muted">Member of Technical Staff</p>
                         <ul>
-                            <li>Orchestration for Puppet</li>
-                            <li>Orchestration for Chef</li>
-                            <li>Orchestration for Ansible</li>
+                            <li>Orchestration using Puppet</li>
+                            <li>Orchestration using Chef</li>
+                            <li>Orchestration using Ansible</li>
                             <li>Migration of VMware vSphere OVA to Azure</li>
                         </ul>
                     </div>
