--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                 <div class="col-lg-5 ml-auto contact-block bg-light p60 wow fadeInLeft">	
                     <h4>Send a Message</h4>
                     <span class="line mb30"></span>
-                    <form >
+                    <form action="mailto:ishwar.code@gmail.com" method="post" enctype="text/plain" >
                         <div class="form-group">
                             <input  class="form-control" id="form_name" type="text" name="name" placeholder="Name *" required="required">
                         </div>
