adding new skills

--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
                     <div class="card border border-right-0">
                         <div class="card-body p60 pt100">
                             <h3>Personal Info</h3>
-                              <p class="mt-20">Prior to Coriolis, I have completed Diploma in Big Data Analytics and Bachelor of Engineering from Univesity Of Pune.</p>
+                              <p class="mt-20">I have completed Diploma in Big Data Analytics and Bachelor of Engineering from Univesity Of Pune.</p>
                     <p class="mt-20">I am a quick learner and enthusiastic about learning new technologies. I am working with C, Python, Java, R, Kotlin, Bash, Go language for my development purpose.</p>
                     <p class="mt-20">I am also working on some hobby project such as developing apps in Kotlin for android platform, real-time image classification in an android app by training machine learning model on the server and recompiling it using TensorFlow for Android, another one is creating real-time face recognition using facenet as backend.</p>
+                    <p class="mt-20">In my Free time, I also have completed coursed related to Machine Learning from various resources like Udemy, Coursera etc</p>
                             <ul class="mt25 info list-unstyled">
                                 <!-- <li><span>Birthdate</span> : 09/13/1996</li> -->
                                 <!-- <li><span>Email</span> : info@website.com</li> -->
@@ -159,6 +160,30 @@
                                 <div class="col-9">
                                     <h6 class="title">DevOps</h6>
                                     <p class="subtitle">Ansible, Puppet, Chef</p>
+                                    <hr>
+                                </div>
+                            </div>
+                         <div class="row">
+                                <div class="col-2 text-right text-danger"><i class="fa font30"></i></div>
+                                <div class="col-9">
+                                    <h6 class="title">Stacks</h6>
+                                    <p class="subtitle">MongoDB, SQL</p>
+                                    <hr>
+                                </div>
+                            </div>
+                             <div class="row">
+                                <div class="col-2 text-right text-danger"><i class="fa font30"></i></div>
+                                <div class="col-9">
+                                    <h6 class="title">CLOUD</h6>
+                                    <p class="subtitle">AWS, Azure </p>
+                                    <hr>
+                                </div>
+                            </div>
+                              <div class="row">
+                                <div class="col-2 text-right text-danger"><i class="fa font30"></i></div>
+                                <div class="col-9">
+                                    <h6 class="title">Tools</h6>
+                                    <p class="subtitle">SVN, Github, Latex</p>
                                     <hr>
                                 </div>
                             </div>
