--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
                             <P class="subtitle">Cancer Survival Prediction in this project based on the dataset we use to predict survival of patients.</P>
                             <P><strong>Software Development</strong></P>
                             <P class="subtitle">Added features and maintained Soap API client written in C language</P>
-                            <P class="subtitle">Rails REST API development for an android app, also implemented XMPP server REST API.</P>
+                            <P class="subtitle">Rails REST API development for an android app.</P>
+                            <P class="subtitle">Implemented Ejabberd XMPP chat server in Rails</P>
                             <hr>
                         </div>
                     </div>
@@ -398,7 +399,7 @@
                         <div class="card-body pt20 pl40 pr50">
                             <h6 class="title mb10"> <a href="./ml.html">Data Science &amp; Machine Learning</a></h6>
                             <P class="subtitle">I have worked with Classification Problems such Titanic: Machine Learning from Disaster, Otto Group Product Classification Challenge, Imbalanced classes.</P> 
-                            <P class="subtitle">Some of the regression problem I have worked on House Prices: Advanced Regression Techniques, Loan Prediction. There are other projects that I have worked with some of them are NLP, Text generation with Markov chains, Collaborative filtering Recommendation System.  </P>
+                            <P class="subtitle">Some of the regression problem I have worked on House Prices: Advanced Regression Techniques, Loan Prediction. There are other projects that I have worked with some of them are NLP, Collaborative filtering Recommendation System.  </P>
                         </div>
                     </div>
                 </div>
@@ -411,7 +412,7 @@
                         </div>
                         <div class="card-body pt20 pl40 pr50">
                             <h6 class="title mb10"><a href="./ml.html">Computer Vision</a></h6>
-                            <P class="subtitle">I have worked with computer vision problems such as building License Plate Recognition for Indian License Plate, where the width of the license plate is not fixed, digit dimension and font is not fixed, so I created Object detector and custom OCR for it.</P>
+                            <P class="subtitle">I have worked with computer vision problems such as building License Plate Recognition for Indian License Plate, where the width of the license plate is not fixed, digit dimension and font is not fixed so built ocr and detector for it.</P>
                             <P class="subtitle">I have also created Real-Time Face Recognition Engine using Facenet, which can detect faces and assign the label to it from the trained model.</P>
                         </div>
                     </div>
@@ -453,7 +454,7 @@
                         </div>
                         <div class="card-body pt20 pl40 pr50">
                             <h6 class="title mb10"><a href="./git.html">Software Development</a></h6>
-                            <P class="subtitle">For my development task, I use language suitable for the task. I have created a REST client using Golang for the specific use case, I was working SOAP API client in C language for the client.</P>
+                            <P class="subtitle">For my development task, I use language suitable for the task. I have created a REST client using Golang for the specific use case.</P>
                             <P class="subtitle">I have worked with Ruby on Rails for two years in which I was developing REST API using Rails as backend.</P>
                         </div>
                     </div>
@@ -500,8 +501,8 @@
                                     <div class="carousel-item text-center">
                                         <img src="assets/imgs/mobile.jpg" alt="boostrap 4 free templates, bootstrap 4 resume template." class="circle-100 m20">
                                         <h3 class="my-font text-light m0">Mobile Development</h3>
-                                        <h6 class="font-weight-light text-light pb10">I have created apps for Android, Tensorflow for Android</h6>
-                                        <p class="text-light"></p>
+                                        <h6 class="font-weight-light text-light pb10">Android, Tensorflow, IOS-ML</h6>
+                                        <p class="text-light">I have created apps for Android, Tensorflow for Android</p>
                                     </div>
                                 </div>
                             </div>
