--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <h5 class="mt25">Machine Learning Researcher | Software Developer | Data Scientist</h5>
                             <p class="mt-20">I am currently working with Coriolis Technologies Pvt Ltd. I had developed and maintained the number of applications in Coriolis such as License plate recognition engine, SOAP-API client in C, AMI automation tool for AWS CLI, Orchestration tool for Puppet, Chef &  Ansible written in Ruby On Rails.</p>
                     <p class="mt-20">Other than active development on daily basis, my responsibilities here at Coriolis includes working as Scrum master, leading the small team of Developer and QA members.</p>
-                    <p class="mt-20">I am interested in artificial intelligence. I am particularly interested in evolutionary methods for developing intelligent behavior</p>
+                    <p class="mt-20">My area of research is  Artificial general intelligence(AGI). I am working on an application of reinforcement learning to create a Cognitive systems.</p>
                     <button class="btn btn-outline-danger mt30" type="button" onclick="location.href='./resume/resume.pdf';"><i class="icon-down-circled2 " ></i>Download CV</button>
                         </div>
                     </div>  
@@ -107,7 +107,7 @@
                               <p class="mt-20">I have completed Diploma in Big Data Analytics and Bachelor of Engineering from Univesity Of Pune.</p>
                     <p class="mt-20">I am a quick learner and enthusiastic about learning new technologies. I am working with C, Python, Java, R, Kotlin, Bash, Go language for my development purpose.</p>
                     <p class="mt-20">I am have also worked on some hobby projects such as developing apps in Kotlin for android platform, real-time image classification in an android app by training machine learning model on the server and recompiling it using TensorFlow for Android, another one is creating real-time face recognition using facenet as backend.</p>
-                    <p class="mt-20">In my free time I like to work on interesting projects, I also have completed courses related to Machine Learning, AI from Udemy, Coursera.</p>
+                    <p class="mt-20">In my free time I like to work on interesting projects in Data Science domain. I also have completed courses related to Machine Learning, AI from Udemy, Coursera.</p>
                             <ul class="mt25 info list-unstyled">
                                 <!-- <li><span>Birthdate</span> : 09/13/1996</li> -->
                                 <!-- <li><span>Email</span> : info@website.com</li> -->
@@ -159,6 +159,14 @@
                             <div class="row">
                                 <div class="col-2 text-right text-danger"><i class="fa font30"></i></div>
                                 <div class="col-9">
+                                    <h6 class="title">Visualization Tools</h6>
+                                    <p class="subtitle">R(ggplot), Python(Matplotlib), Tableau</p>
+                                    <hr>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-2 text-right text-danger"><i class="fa font30"></i></div>
+                                <div class="col-9">
                                     <h6 class="title">DevOps</h6>
                                     <p class="subtitle">Ansible, Puppet, Chef</p>
                                     <hr>
@@ -180,7 +188,7 @@
                                     <hr>
                                 </div>
                             </div>
-                              <div class="row">
+                        <div class="row">
                                 <div class="col-2 text-right text-danger"><i class="fa font30"></i></div>
                                 <div class="col-9">
                                     <h6 class="title">Tools</h6>
