--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
                                     <hr>
                                 </div>
                             </div>
-                            <div class="row">
+<!--                             <div class="row">
                                 <div class="col-2 text-right text-danger"><i class="fa font30"></i></div>
                                 <div class="col-9">
                                     <h6 class="title">Visualization Tools</h6>
                                     <p class="subtitle">R(ggplot), Python(Matplotlib), Tableau</p>
                                     <hr>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="row">
                                 <div class="col-2 text-right text-danger"><i class="fa font30"></i></div>
                                 <div class="col-9">
