--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="text-light header-content">
                     <h1 class="text text-light wow fadeInLeft">Hello, I am</h1>
                     <h1 class="display-1 name font-weight-bold text-light wow fadeInLeft"data-wow-delay=".4s">Ishwar Sawale</h1>
-                    <p class="title wow fadeInUp" data-wow-delay=".8s">Machine Learning Researcher | Software Developer</p>
+                    <p class="title wow fadeInUp" data-wow-delay=".8s">Machine Learning Researcher | Software Developer  | Data Scientist</p>
                     <button class="btn btn-danger wow fadeIn" type="button" onclick="location.href='./resume/resume.pdf';"><i class="fa fa-print pr13"></i>PRINT RESUME</button>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                         <img src="assets/imgs/avatar1.jpg" alt="" class="circle-180 nav-logo-img">
                         <li class="nav-logo-title">
                             <h5 class="m-auto title mt5">Ishwar Sawale</h5>
-                            <div class="subtitle mt4">Machine Learning Researcher | Software Developer</div>
+                            <div class="subtitle mt4">Machine Learning Researcher | Software Developer  | Data Scientist</div>
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto">
@@ -92,8 +92,8 @@
                     <div class="card border border-right-0">
                         <div class="card-body p60 pt100">
                             <h3>Who am I ?</h3>
-                            <h5 class="mt25">Machine Learning Researcher | Software Developer | Data Scientist</h5>
-                            <p class="mt-20">I am currently working with Coriolis Technologies Pvt Ltd. I had developed and maintained the number of applications in Coriolis such as License plate recognition engine, SOAP-API client in C, AMI automation tool for AWS CLI, Orchestration tool for Puppet, Chef &  Ansible written in Ruby On Rails.</p>
+                            <h5 class="mt25">Machine Learning Researcher | Data Scientist</h5>
+                            <p class="mt-20">I am currently working with Coriolis Technologies Pvt Ltd. I had developed and maintained the number of applications in Coriolis such as License plate recognition engine, SOAP-API client in C, AMI automation tool for AWS CLI, Orchestration tool for Puppet, Chef &amp;  Ansible written in Ruby On Rails.</p>
                     <p class="mt-20">Other than active development on daily basis, my responsibilities here at Coriolis includes working as Scrum master, leading the small team of Developer and QA members.</p>
                     <p class="mt-20">My area of research is  Artificial general intelligence(AGI). I am working on an application of reinforcement learning to create a Cognitive systems.</p>
                     <button class="btn btn-outline-danger mt30" type="button" onclick="location.href='./resume/resume.pdf';"><i class="icon-down-circled2 " ></i>Download CV</button>
@@ -220,7 +220,7 @@
                         <div class="card-body pt20 pl40 pr50">
                             <h6 class="title text-danger">2017 - NOW</h6>
                             <P><strong>Rails Development</strong></P>
-                            <P class="subtitle">Created REST API for orchestration using Chef, Puppet & Ansible Configuration Manager</P>
+                            <P class="subtitle">Created REST API for orchestration using Chef, Puppet &amp; Ansible Configuration Manager</P>
                             <P class="subtitle">Created REST client using Golang for specific use case</P>
                             <P class="subtitle">Handled Responsibilities as Scrum Master</P>
                             <P><strong>Machine Learning Development</strong></P>
@@ -254,15 +254,15 @@
                         <div class="card-body pt20 pl40 pr50">
                             <h6 class="title text-danger">2015 - 2016</h6>
                             <P> <strong>Diploma in Big Data Analyatics</strong></P>
-                            <P class="subtitle">Machine Learning, Hadoop, Java, Python, R, Business Analyatics</P>
+                            <P class="subtitle">Machine Learning, Hadoop, Java, Python, R, Business Analyatics, Statistical Analysis with R, Cloud Computing &amp; HPC Applications, </P>
                             <hr>
                             <h6 class="title text-danger">2014 - 2011</h6>
                             <P><strong>Bachelor Of Engineering E &amp; TC</strong></P>
-                            <P class="subtitle">C, Assembly Language, 8051, PIC, Linux OS, Java,</P>
+                            <P class="subtitle">C, Assembly Language, Probability, Random Variables and Random Signals, Java, Linear Differential Equations (LDE) , Fourier Transform, Introductory Z-Transform (ZT), Vector Differential Calculus, Vector Integral Calculus, MatLab, Digital Signal Processing, Systems Programming and Operating System</P>
                             <hr>
                             <h6 class="title text-danger">2008 - 2011</h6>
                             <P><strong>Diploma in E &amp; C</strong></P>
-                            <P class="subtitle">Embedded C, Assembly Language</P>
+                            <P class="subtitle">C, Assembly Language, Applied mathematics, Algebra, Statistics, Microcontroller</P>
                             
                         </div>
                     </div>
@@ -422,7 +422,7 @@
                         <div class="card-body pt20 pl40 pr50">
                             <h6 class="title mb10"><a href="./ml.html">Computer Vision</a></h6>
                             <P class="subtitle">I have worked with computer vision problems such as building License Plate Recognition for Indian License Plate, where the width of the license plate is not fixed, digit dimension and font is not fixed so built ocr and detector for it.</P>
-                            <P class="subtitle">I have also created Real-Time Face Recognition Engine using Facenet, which can detect faces and assign the label to it from the trained model.</P>
+                            <P class="subtitle">I have also created Real-Time Face Recognition Engine using Facenet, which can detect faces and assign the label to it from the trained model. There are some projects where I have reatrained and optimized it for an android app.</P>
                         </div>
                     </div>
                 </div>
