--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                                                 <div class="col-sm-6 col-lg-3 p5">
                             <div class="card text-center bg-light">
                                 <div class="card-body">
-                                    <h2 class="p20"><strong>Digit Recognition App</strong></h2>
+                                    <h2 class="p20"><strong>Digit Recognition App Using Keras</strong></h2>
 <!--                                     <div class="price pb40">
                                         <sup class="font20">&#36;</sup><span class="font60 pl15 text-gold">30</span><sub class="font15">/Mo</sub>
                                     </div> -->
