--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                             
                         </div>
                     </div>
-                                        <div class="card">
+                      <div class="card">
                        <div class="card-header pt30 pl40 pr50">
                             <div class="pull-left">
                                 <h4>Courses</h4>
@@ -277,13 +277,19 @@
                             </div>
                         </div>
                         <div class="card-body pt20 pl40 pr50">
-                            <P>Neural Networks and Deep Learning by deeplearning.ai on Coursera</P>
-                            <P>Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization by deeplearning.ai on Coursera</P>
-                            <P>Structuring Machine Learning Projects by deeplearning.ai on Coursera</P>
-                            <P>Artificial Intelligence A-Z Learn How To Build An AI on Udemy</P>
-                            <P>Deep Learning A-Z Hands-On Artificial Neural Networks on Udemy</P>
-                            <P>Practical Deep Learning with PyTorch on Udemy</P>
-                            <P>Machine Learning A-Z Hands-On Python &amp; R In Data Science on Udemy</P>
+                             <ul class="mt25 info list-unstyled">
+                                <li><a href="https://www.coursera.org/account/accomplishments/certificate/2KKVL2XQWEST" style="color:#7C7A74">Neural Networks and Deep Learning by deeplearning.ai on Coursera</a></li>
+                                <li><a href="https://www.coursera.org/account/accomplishments/certificate/9UP9DFNML83E" style="color:#7C7A74">Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization by deeplearning.ai on Coursera</a></li>
+                                <li><a href="https://www.coursera.org/account/accomplishments/certificate/8HFMY6CMAZJT" style="color:#7C7A74">Structuring Machine Learning Projects by deeplearning.ai on Coursera</a></li>
+                                <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-JNF8WDJ3.jpg" style="color:#7C7A74">Artificial Intelligence A-Z Learn How To Build An AI on Udemy</a></li>
+                                <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-ZQ9N6RFK.jpg" style="color:#7C7A74">Deep Learning A-Z Hands-On Artificial Neural Networks on Udemy</a></li>
+                                <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-IDCI6HG6.jpg" style="color:#7C7A74">Practical Deep Learning with PyTorch on Udemy</a></li>
+                                <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-WWQ55J9U.jpg" style="color:#7C7A74">Machine Learning A-Z Hands-On Python &amp; R In Data Science on Udemy</a></li>
+                                <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-VL1NUDT3.jpg" style="color:#7C7A74">The Complete Ruby on Rails Developer Course on Udemy</a></li>
+                                <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-4MEXYP0T.jpg" style="color:#7C7A74">Workshop in Probability and Statistics on Udemy</a></li>
+                                <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-5OTZ69O7.jpg" style="color:#7C7A74">Swift 4 Language, A Complete Overview With IOS 11 CoreML App on Udemy</a></li>
+                                <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-JNF8WDJ3.jpg" style="color:#7C7A74">Complete Guide to TensorFlow for Deep Learning with Python on Udemy</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
