addding new course

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                   <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-4MEXYP0T.jpg" style="color:#7C7A74">Workshop in Probability and Statistics on Udemy</a></li>
                   <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-5OTZ69O7.jpg" style="color:#7C7A74">Swift 4 Language, A Complete Overview With IOS 11 CoreML App on Udemy</a></li>
                   <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-JNF8WDJ3.jpg" style="color:#7C7A74">Complete Guide to TensorFlow for Deep Learning with Python on Udemy</a></li>
-                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-DZXNKN6C.jpg" style="color:#7C7A74">Deep Learning and NLP A-Z™: How to create a ChatBot</a></li>
+                  <li><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-DZXNKN6C.jpg" style="color:#7C7A74">Deep Learning and NLP A-Z™: How to create a ChatBot on Udemy</a></li>
                 </ul>
               </div>
             </div>
